//// ----------------------------------------------------
////     AUTO-GENERATED FROM SUPERBASE - DO NOT EDIT
//// ----------------------------------------------------

Project n_school_hub {
  database_type: 'PostgreSQL'
  Note: 'Schéma de la base de données Ntik School Hub sur Supabase'
}

Table activity_logs {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid
  action text
  target_table text
  target_id uuid
  timestamp timestamp [default: `CURRENT_TIMESTAMP`]
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table attendances {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  student_id uuid
  date date
  state text
  justification text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table budgets {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  category text [not null]
  amount float8 [not null]
  period_start timestamptz [not null]
  period_end timestamptz [not null]
  school_id uuid
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  local_id integer
}

Table classes {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  level text
  school_id uuid
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table dispatch_rule_details {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  dispatch_rule_id uuid [not null]
  destination_category_id uuid [not null]
  percentage numeric [not null]
  created_at timestamptz [not null, default: `now()`]
  last_modified timestamptz [not null, default: `now()`]
  is_deleted boolean [not null, default: false]
}

Table dispatch_rules {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  source_fee_id uuid [not null]
  school_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  last_modified timestamptz [not null, default: `now()`]
  is_deleted boolean [not null, default: false]
}

Table employees {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid
  job_title text
  salary float8
  matricule text
  school_id uuid
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table events {
  id uuid [pk, not null, default: `uuid_generate_v4()`]
  title text [not null]
  description text
  date timestamptz [not null]
  location text
  image_url text
  school_id uuid [not null]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table expo_push_tokens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token text [not null]
  created_at timestamptz [not null, default: `now()`]
  last_modified timestamptz [not null, default: `now()`]
}

Table fee_templates {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  amount float8 [not null]
  frequency text [not null]
  due_day integer
  applicable_months jsonb
  school_id uuid [not null]
  applies_to_level text
  applies_to_class_id uuid
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  local_id integer
}

Table fees {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  school_id uuid
  name text
  amount float8
  due_date date
  school_year text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
  level text [default: `'all'::text`]
  class_id uuid
}

Table financial_categories {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  type text [not null]
  last_modified timestamptz [not null, default: `now()`]
  is_deleted boolean [not null, default: false]
  local_id integer
  school_id uuid
}

Table financial_reports {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  title text [not null]
  generated_at timestamptz [not null]
  start_date timestamptz [not null]
  end_date timestamptz [not null]
  content jsonb
  school_id uuid
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  local_id integer
}

Table financial_transactions {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  date timestamptz [not null]
  description text [not null]
  amount float8 [not null]
  type text [not null]
  category_id uuid [not null]
  last_modified timestamptz [not null, default: `now()`]
  is_deleted boolean [not null, default: false]
  local_id integer
  school_id uuid
}

Table lessons {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  teacher_id uuid
  class_id uuid
  subject_id uuid
  school_year text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table notes {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  student_id uuid
  lesson_id uuid
  value float8
  type text
  quarter integer
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table parents {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  profession text
  address text
  name text
  phone text
  email text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
  school_id uuid
  first_name text
}

Table payments {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  registration_id uuid
  amount float8
  method text
  date date [default: `CURRENT_DATE`]
  reference text
  emitter_id uuid
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
  single_fee_id uuid
  fee_template_id uuid
  period_identifier text
}

Table registrations {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  student_id uuid
  class_id uuid
  school_id uuid
  school_year text
  state text
  registration_date date [default: `CURRENT_DATE`]
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table role_permissions {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  role_id uuid [not null]
  screen_id uuid [not null]
  school_id uuid [not null]
  access_level text [not null]
  created_at timestamptz [not null, default: `now()`]
  last_modified timestamptz [not null, default: `now()`]
}

Table roles {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table salary_payments {
  employee_id uuid [not null]
  base_salary real [default: 0]
  bonus_amount real [default: 0]
  total_amount real [not null]
  payment_date text [not null]
  notes text
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  id uuid [pk, not null, default: `gen_random_uuid()`]
}

Table schedules {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  lesson_id uuid
  day_of_week text
  start_time time
  end_time time
  is_synced boolean [default: false]
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table schools {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  address text
  phone text
  email text
  registration_code text
  created_at date [default: `CURRENT_DATE`]
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table screens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  description text
  created_at timestamptz [not null, default: `now()`]
}

Table student_parents {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  student_id uuid
  parent_id uuid
  relation text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table student_fees {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  registration_id uuid [not null]
  fee_template_id uuid
  single_fee_id uuid
  custom_amount float8 [not null]
  reason text
  school_year text
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  local_id integer
}

Table students {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  first_name text [not null]
  genre text
  birth_date date
  matricul text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
  picture_url text
}

Table subjects {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  school_id uuid
  class_id uuid
  school_year text
  coefficient integer
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table teacher_work_hours {
  teacher_id uuid [not null]
  subject_id uuid
  date text
  start_time text
  end_time text
  hours real [not null]
  notes text
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  id uuid [pk, not null, default: `gen_random_uuid()`]
}

Table teachers {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid
  speciality text
  matricule text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
  "hourlyRate" real [default: '0'::real]
}

Table users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name text [not null]
  first_name text [not null]
  phone text
  email text
  password_hash text [not null]
  role_id uuid
  school_id uuid
  profile_picture_url text
  local_id integer
  is_synced boolean [default: false]
  sync_timestamp timestamptz
  is_deleted boolean [default: false]
  last_modified timestamptz [default: `now()`]
}

Table employee_attendances {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  employee_id uuid
  teacher_id uuid
  check_in timestamptz [not null]
  check_out timestamptz
  notes text
  school_id uuid
  last_modified timestamptz [default: `now()`]
  is_deleted boolean [default: false]
  local_id integer
}


//// RELATIONS
Ref: users.role_id > roles.id
Ref: users.school_id > schools.id
Ref: role_permissions.role_id > roles.id
Ref: role_permissions.screen_id > screens.id
Ref: role_permissions.school_id > schools.id
Ref: classes.school_id > schools.id
Ref: student_parents.student_id > students.id
Ref: student_parents.parent_id > parents.id
Ref: teachers.user_id > users.id
Ref: employees.user_id > users.id
Ref: employees.school_id > schools.id
Ref: subjects.school_id > schools.id
Ref: subjects.class_id > classes.id
Ref: lessons.teacher_id > teachers.id
Ref: lessons.class_id > classes.id
Ref: lessons.subject_id > subjects.id
Ref: notes.student_id > students.id
Ref: notes.lesson_id > lessons.id
Ref: registrations.student_id > students.id
Ref: registrations.class_id > classes.id
Ref: registrations.school_id > schools.id
Ref: fees.school_id > schools.id
Ref: fees.class_id > classes.id
Ref: payments.registration_id > registrations.id
Ref: payments.emitter_id > users.id
Ref: payments.single_fee_id > fees.id
Ref: payments.fee_template_id > fee_templates.id
Ref: attendances.student_id > students.id
Ref: schedules.lesson_id > lessons.id
Ref: salary_payments.employee_id > employees.id
Ref: teacher_work_hours.teacher_id > teachers.id
Ref: teacher_work_hours.subject_id > subjects.id
Ref: financial_categories.school_id > schools.id
Ref: financial_transactions.category_id > financial_categories.id
Ref: financial_transactions.school_id > schools.id
Ref: dispatch_rules.source_fee_id > fees.id
Ref: dispatch_rules.school_id > schools.id
Ref: dispatch_rule_details.dispatch_rule_id > dispatch_rules.id
Ref: dispatch_rule_details.destination_category_id > financial_categories.id
Ref: activity_logs.user_id > users.id
Ref: expo_push_tokens.user_id > users.id
Ref: fee_templates.school_id > schools.id
Ref: fee_templates.applies_to_class_id > classes.id
Ref: budgets.school_id > schools.id
Ref: financial_reports.school_id > schools.id
Ref: employee_attendances.employee_id > employees.id
Ref: employee_attendances.teacher_id > teachers.id
Ref: employee_attendances.school_id > schools.id

Ref: student_fees.registration_id > registrations.id
Ref: student_fees.fee_template_id > fee_templates.id
Ref: student_fees.single_fee_id > fees.id